# rclone_ignore

./: .travis.yml  Cargo.toml  README.md  azure_pipelines.yml  build.rs
ci/: azure-install-rust.yml
src/: args.rs  main.rs  pathop.rs  tray.rs
src/windows/: rclone_ignore.rc
ws_server/: Cargo.toml
ws_server/src/: main.rs
