[package]
name = "rclone_ignore"
version = "0.1.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
edition = "2018"

[dependencies]
notify = "4.0.6"
ignore = "0.4.4"
clap = "2.32.0"
which = "2.0.1"
rayon = "1.0.3"
log = "0.4.6"
env_logger = "0.6.0"
globset = "0.4.2"
walkdir = "2.2.7"
