[package]
name = "rclone_ignore"
version = "0.7.0"
authors = ["Michael Kaltschmid <kaltschmidmichael@gmail.com>"]
edition = "2018"

[dependencies]
notify = "4.0.6"
ignore = "0.4.4"
clap = "2.32.0"
which = "2.0.1"
rayon = "1.0.3"
log = "0.4.6"
env_logger = "0.6.0"
globset = "0.4.2"
walkdir = "2.2.7"
num_cpus = "1.9.0"
crossbeam = "0.7.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }
systray = "0.4.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.3.2"

[features]
tray = []
